--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header class="about">
 <div class="img-title">
-    <img id="man" rel="professional looking man" src="images/man.jpg" >
+    <img id="man" rel="professional looking man" src="man.jpg" >
     <h1 class="title">Danny Daniels</h1>
 </div> <!-- close image -->
   <div class="bio">
@@ -23,9 +23,9 @@
       <p class="method">(H) + 1 415-123-0012</p> <p class="method">(C) +1 415-123-1200</p> <p class="method">(E) danny@live.com</p>
     </section> <!--close contact-->
       <div class="container-images">
-        <div class="pic"><img src="images/home.jpg"></div>
-        <div class="pic"><img src="images/mobile.jpg"></div>
-        <div class="pic"><img src="images/online.jpg"></div>
+        <div class="pic"><img src="home.jpg"></div>
+        <div class="pic"><img src="mobile.jpg"></div>
+        <div class="pic"><img src="online.jpg"></div>
       </div> <!--close container-images-->
     </header>
     <main>
@@ -74,9 +74,9 @@
 
 
 <section class="container-images">
-    <div class="img"><img src="images/cert.jpg"></div>
-    <div class="img"><img src="images/edu.jpg"></div>
-    <div class="img"><img src="images/light.jpg"></div>
+    <div class="img"><img src="cert.jpg"></div>
+    <div class="img"><img src="edu.jpg"></div>
+    <div class="img"><img src="light.jpg"></div>
 </section> <!--close container-images-->
  
  
