--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2>Work Experience</h2>
     </div> <!--close work experience-->
 
-    <div class="rows"> <!-- width, centered, and flex to make columns -->
+    <div class="rows"> 
         
         <!-- row 1 -->
         <div class="row">
@@ -80,7 +80,7 @@
 </section> <!--close container-images-->
  
  
-     <section class="qualifications"> <!-- width, centered, and flex to make columns -->
+     <section class="qualifications"> 
          
          <!-- column 1 -->
          <div class="column">
